<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.citationAppliMobile.CitationResultActivity">


    <ImageView
        android:id="@+id/book_img"
        android:layout_width="85dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/citation_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/Similar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_citation" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Book_Author"
        app:layout_constraintStart_toStartOf="@+id/book_annee_parution"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_citation"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Citation: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_annee_parution" />

    <TextView
        android:id="@+id/book_annee_parution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/years_parrution"
        app:layout_constraintStart_toEndOf="@+id/book_img"
        app:layout_constraintTop_toBottomOf="@+id/book_author" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_citation_connexes"
        android:layout_width="383dp"
        android:layout_height="285dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fadeScrollbars="true"
        android:text=""
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:itemCount="4"
        tools:listitem="@layout/layout_citations_connexes" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/book_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Citations avec le même sens:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citation_author_books" />

    <TextView
        android:id="@+id/citation_author_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:onClick="showOtherBooks"
        android:text="@string/autres_livres_du_m_me_auteur"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citation_tags" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="addToFavorites"
        android:text="Ajouter aux favoris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item_favoris"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>